Update kafka/src/main/java/io/specmesh/kafka/ProvisionStatus.java
Co-authored-by: Andy Coates <8012398+big-andy-coates@users.noreply.github.com>